RESOLVED FIXED 269780
[Skia] Fix arcs when direction is counterclockwise or more than one arc is added to the path
https://bugs.webkit.org/show_bug.cgi?id=269780
Summary [Skia] Fix arcs when direction is counterclockwise or more than one arc is ad...
Carlos Garcia Campos
Reported 2024-02-20 02:54:24 PST
We can't use SkPath::addOval() because it closes the path, so new arcs added are not correctly handled. We also need to make the sweep angle negative when direction is counterclockwise.
Attachments
Carlos Garcia Campos
Comment 1 2024-02-20 02:56:54 PST
EWS
Comment 2 2024-02-20 04:17:48 PST
Committed 275034@main (68c99280815b): <https://commits.webkit.org/275034@main> Reviewed commits have been landed. Closing PR #24805 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.