[Skia] Fix arcs when direction is counterclockwise or more than one arc is added to the path https://bugs.webkit.org/show_bug.cgi?id=269780

Reviewed by Adrian Perez de Castro.

We can't use SkPath::addOval() because it closes the path, so new arcs
added are not correctly handled. We also need to make the sweep angle
negative when direction is counterclockwise.

* Source/WebCore/platform/graphics/skia/PathSkia.cpp:
(WebCore::PathSkia::addEllipse):
(WebCore::PathSkia::add):
* Source/WebCore/platform/graphics/skia/PathSkia.h:

Canonical link: https://commits.webkit.org/275034@main